<resources>
    <string name="app_name">WB_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bottom_nav_service">Service</string>
    <string name="bottom_nav_broadcast_receiver">BroadcastReceiver</string>
    <string name="bottom_nav_content_provider">ContentProvider</string>

    <string name="broadcast_receiver_header_airplane_mode">Airplane Mode Register</string>

    <string name="content_provider_header_users">Users</string>
    <string name="insert_data">Insert data</string>
    <string name="get_data">Get data</string>
    <string name="edit_text_hint">Write data</string>
    <string name="no_records_found">No records found</string>

    <string name="service_header_music_player">Music player</string>
    <string name="start_music_button_text">Start</string>
    <string name="stop_music_button_text">Stop</string>

    <string name="register_broadcast">Register Broadcast</string>
    <string name="unregister_broadcast">Unregister Broadcast</string>
</resources>